# booking-titanium-py

./: .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.ai-agent  add_waitlist_schema.py  commit_msg.txt  docker-compose.old.yml  docker-compose.yml  fix_integration_tests.py  fix_nav.py  fix_provider.py  fix_remaining.py  fix_test.py  fix_unit_tests.py  fsm_architectural_guide.md  main.py  mypy_errors.txt  pyproject.toml  pyrightconfig.json  refactor_callback_versioning.md  rewrite_tests.py  run_local.sh  seed_doctor_slots.py  tdd.sh  tdu.sh  test_db.py
.antigravitycli/: 4db458f3-198d-4a6f-84d5-e7d229f2aeba.json
app/: container.py  main.py
app/core/: circuit_breaker.py  config.py  crypto.py  lifespan.py  logging.py
app/db/: connection.py  conversation_tx.py  redis_client.py
app/domain/: entities.py  enums.py  exceptions.py  models.py  protocols.py
app/fsm/: booking_flow.py  faq_flow.py  main.py  profile_flow.py  reminder_flow.py  report_flow.py
app/middleware/: auth.py
app/pipeline/: classifier.py  preprocessor.py
app/services/: ai_service.py  auth_service.py  booking_service.py  gcal_service.py  note_service.py  notification_service.py  rag_service.py  slot_engine.py  user_service.py
app/telegram/: callback.py  sender.py
app/worker/: settings.py  tasks.py
db/migrations/: 001_schema.sql  002_rls_policies.sql  003_functions.sql  004_seed.sql  005_provider_gcal.sql  (+4 more)
docs/: auditoria-2.md
f/: __init__.script.yaml  codex.json
scripts/: commit-and-push.sh  telegram_poller.py  test_reminders_live.py  trs.sh
tests/: conftest.py  schema.sql
(+564 files in other folders)
