[project]
name = "booking-titanium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "redis>=5.3.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.153.2",
    "mypy>=2.1.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]
